--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.10"
 dependencies    = [
     "camelot-py[base]>=0.9.0",
     "img2table>=1.4.0",
+    "imgkit>=1.2.3",
     "matplotlib>=3.10.0",
     "pandas>=2.2.3",
     "pdf2image>=1.17.0",
