--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies    = [
     "pandas>=2.2.3",
     "pdf2image>=1.17.0",
     "pillow>=11.0.0",
+    "pypandoc>=1.14",
 ]
 dynamic         = ["version"]
 
