--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies    = [
     "pdf2image>=1.17.0",
     "pillow>=11.0.0",
     "pypandoc>=1.14",
+    "tqdm>=4.67.1",
 ]
 dynamic         = ["version"]
 
