--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ description     = "Auto generator latex to table image"
 readme          = "README.md"
 requires-python = ">=3.10"
 dependencies    = [
-    "camelot-py[base]>=0.9.0",
+    "camelot-py[base]==0.9.0",
     "img2table>=1.4.0",
     "imgkit>=1.2.3",
     "matplotlib>=3.10.0",
