--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies    = [
     "camelot-py[base]==0.9.0",
     "img2table>=1.4.0",
     "imgkit>=1.2.3",
+    "lxml>=5.3.0",
     "matplotlib>=3.10.0",
     "pandas>=2.2.3",
     "pdf2image>=1.17.0",
