--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pdf2image>=1.17.0",
     "pillow>=11.0.0",
     "pypandoc>=1.14",
+    "tabulate>=0.9.0",
     "tqdm>=4.67.1",
 ]
 
