--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.10"
 dynamic = ["version"]
 dependencies = [
     "camelot-py[base]==0.9.0",
+    "gradio>=3.36.1",
     "img2table>=1.4.0",
     "imgkit>=1.2.3",
     "lxml>=5.3.0",
