--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "camelot-py[base]==0.9.0",
     "gradio>=3.36.1",
     "img2table>=1.4.0",
+    "imgaug>=0.4.0",
     "imgkit>=1.2.3",
     "lxml>=5.3.0",
     "matplotlib>=3.10.0",
@@ -32,3 +33,6 @@ dependencies = [
     ignore         = ["E402", "F841", "F401", "E203"]
     [tool.hatch.version]
     path = "src/latex_table_generator/__init__.py"
+
+[tool.uv.sources]
+imgaug = { git = "https://github.com/PuchatekwSzortach/imgaug.git", rev = "numpy_fix" }
